--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -2,11 +2,11 @@ version: 1
 datastore:
   user: 'adam' # Your MySQL username
   password: 'password' # Your MySQL password
-  hostname: 'localhost' # Your MySQL server address, use 'localhost' if running locally
+  hostname: 'kafka-3855.westus3.cloudapp.azure.com' # Your MySQL server address, use 'localhost' if running locally
   port: 3306 # Default MySQL port, adjust if your server uses a different port
   db: 'artist_tracker' # The name of your MySQL database
 events:
-  hostname: localhost # Your VM’s Hostname
+  hostname: kafka-3855.westus3.cloudapp.azure.com # Your VM’s Hostname
   port: 9092
   topic: events
 
