added docker-compose for all services

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.3'
+version: '3.8'
 services:
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
-      - "2181"
+      - "2181:2181"
     hostname: zookeeper
 
   kafka:
@@ -13,21 +13,20 @@ services:
       - "9092:9092"
     hostname: kafka
     environment:
-      KAFKA_CREATE_TOPICS: "events:1:1" # topic:partition:replicas
-      KAFKA_ADVERTISED_HOST_NAME: kafka-3855.westus3.cloudapp.azure.com # Replace <VM DNS Name> with your actual VM DNS name or IP
+      KAFKA_CREATE_TOPICS: "events"
+      KAFKA_ADVERTISED_HOST_NAME: kafka # Use the service name for internal networking
       KAFKA_LISTENERS: INSIDE://:29092,OUTSIDE://:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://kafka-3855.westus3.cloudapp.azure.com:9092 # Replace <VM DNS Name> with your actual VM DNS name or IP
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
-      - "zookeeper"
+      - zookeeper
 
   db:
     image: mysql:5.7
-    restart: always
     environment:
       MYSQL_DATABASE: 'artist_tracker'
       MYSQL_USER: 'adam'
@@ -35,10 +34,46 @@ services:
       MYSQL_ROOT_PASSWORD: 'Padraig#88'
     ports:
       - '3306:3306'
-    expose:
-      - '3306'
     volumes:
       - my-db:/var/lib/mysql
+
+  receiver:
+    build:
+      context: ../receiver
+    ports:
+      - "8080:8080"
+    depends_on:
+      - kafka
+
+  storage:
+    build:
+      context: ../storage
+    ports:
+      - "8090:8090"
+    environment:
+      MYSQL_USER: 'adam'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_DATABASE: 'artist_tracker'
+      MYSQL_HOSTNAME: 'db' # Use the service name for the DB
+    depends_on:
+      - db
+      - kafka
+
+  processing:
+    build:
+      context: ../processing
+    ports:
+      - "8100:8100"
+    depends_on:
+      - storage
+
+  audit:
+    build:
+      context: ../audit
+    ports:
+      - "8110:8110"
+    depends_on:
+      - kafka
 
 volumes:
   my-db:
