--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -62,8 +62,7 @@ services:
   processing:
     build:
       context: ../processing
-    ports:
-      - "8100:8100"
+    network_mode: "host"
     depends_on:
       - storage
 
