--- a/receiver/app_conf.yml
+++ b/receiver/app_conf.yml
@@ -11,3 +11,5 @@ events:
   hostname: kafka-3855.westus3.cloudapp.azure.com
   port: 9092
   topic: events
+  max_retries: 5  
+  retry_interval: 10 
