updated receiver, storage and processing services

--- a/receiver/app_conf.yml
+++ b/receiver/app_conf.yml
@@ -12,4 +12,10 @@ events:
   port: 9092
   topic: events
   max_retries: 25
-  retry_interval: 10 
+  retry_interval: 10
+event_log:
+  hostname: kafka-3855.westus3.cloudapp.azure.com
+  port: 9092
+  topic: event_log
+  max_retries: 25
+  retry_interval: 10
