--- a/processing/app_conf.yml
+++ b/processing/app_conf.yml
@@ -5,3 +5,8 @@ scheduler:
   period_sec: 5
 eventstore:
   url: http://localhost:8090
+kafka:
+  hostname: kafka-3855.westus3.cloudapp.azure.com
+  port: 9092
+  event_log_topic: event_log
+  max_message_threshold: 25
