--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -114,6 +114,7 @@ services:
     volumes:
       - /home/adam/config/event-logger:/config
       - /home/adam/logs:/logs
+      - event-logger-db:/data
     depends_on:
       - kafka
     networks:
@@ -147,6 +148,7 @@ services:
 volumes:
   my-db:
   processing-db:
+  event-logger-db:
 
 networks:
   api.network:
