fixed another typo in docker-compose this time

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -114,7 +114,7 @@ services:
     volumes:
       - /home/adam/config/event-logger:/config
       - /home/adam/logs:/logs
-      - event-logger:/data
+      - event-logger-db:/data
     depends_on:
       - kafka
     networks:
