changed app_conf and app.py to use kafka

--- a/anomaly_detector/app_conf.yml
+++ b/anomaly_detector/app_conf.yml
@@ -1,6 +1,6 @@
 datastore:
   filename: /data/anomaly_logs.db
-events:
+kafka:
   hostname: kafka-3855.westus3.cloudapp.azure.com
   port: 9092
   topic: events
